Changes to DAV's analyze page and fixing alignment issues in profile and newsfeed

--- a/aqxWeb/dav/static/css/explore.css
+++ b/aqxWeb/dav/static/css/explore.css
@@ -36,3 +36,7 @@
 	width:100%;
  	height: calc(100% - 0px);
 }
+
+.no-padding {
+    padding: 0;
+}
